--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -4705,11 +4705,11 @@ a.badge:hover, a.badge:focus {
 
 .badge-primary {
   color: #fff;
-  background-color: #f4623a;
+  background-color: #f4623a !important;
 }
 a.badge-primary:hover, a.badge-primary:focus {
   color: #fff;
-  background-color: #ee3e0d;
+  background-color: #ee3e0d !important;
 }
 a.badge-primary:focus, a.badge-primary.focus {
   outline: 0;
@@ -4853,15 +4853,15 @@ a.badge-dark:focus, a.badge-dark.focus {
 }
 
 .alert-primary {
-  color: #7f331e;
+  color: #7f331e !important;
   background-color: #fde0d8;
   border-color: #fcd3c8;
 }
 .alert-primary hr {
-  border-top-color: #fbc0b0;
+  border-top-color: #fbc0b0 !important;
 }
 .alert-primary .alert-link {
-  color: #562214;
+  color: #562214 !important;
 }
 
 .alert-secondary {
@@ -5205,17 +5205,17 @@ a.badge-dark:focus, a.badge-dark.focus {
 }
 
 .list-group-item-primary {
-  color: #7f331e;
-  background-color: #fcd3c8;
+  color: #7f331e !important;
+  background-color: #fcd3c8 !important;
 }
 .list-group-item-primary.list-group-item-action:hover, .list-group-item-primary.list-group-item-action:focus {
-  color: #7f331e;
-  background-color: #fbc0b0;
+  color: #7f331e !important;
+  background-color: #fbc0b0 !important;
 }
 .list-group-item-primary.list-group-item-action.active {
   color: #fff;
-  background-color: #7f331e;
-  border-color: #7f331e;
+  background-color: #7f331e !important;
+  border-color: #7f331e !important;
 }
 
 .list-group-item-secondary {
