edit dashboard, add wisata detail edit

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -10190,3 +10190,11 @@ header.masthead h1 {
 .input-login{
   width:300px !important;
 }
+
+.label-login{
+  color: black;
+}
+
+.input-wisata{
+  width:100% !important;
+}
